# Environment-Modules

./: .gitattributes  .gitignore  .indent.pro  .spec  ChangeLog  Makefile.am  Makefile.in  ModuleCmd_Avail.c  ModuleCmd_Display.c  ModuleCmd_Init.c  ModuleCmd_List.c  ModuleCmd_Refresh.c  ModuleCmd_Switch.c  ModuleCmd_Update.c  ModuleCmd_Whatis.c  README.md  aclocal.m4  cmdAlias.c  cmdChdir.c  cmdConflict.c  cmdLog.c  cmdMisc.c  cmdModule.c  cmdPath.c  cmdSetenv.c  cmdTrace.c  cmdUlvl.c  cmdUname.c  cmdVersion.c  cmdWhatis.c  cmdXResource.c  config.h.in  configure  configure.ac  configure.ac.bak  configure.scan  error.c  getopt.c  init.c  locate_module.c  (+10 more)
MacPorts/: PortIndex  PortIndex.quick
config/: unix.exp
doc/: .gitignore  Makefile.in  module.1  modulefile.4
etc/: .gitignore  Makefile.am  Makefile.in  add.modules  mkroot
etc/global/: bashrc  csh.cshrc  csh.modules  profile.modules
etc/skel/: .cshrc  .gitignore  .kshenv  .login  .profile
ext/: .gitignore  Makefile.am  Makefile.in  add.ext  mkroot
ext/common/: .cshrc  .gitignore  .kshenv  .login  .profile
init/: .gitignore  Makefile.am  Makefile.in
m4/: aclocal.m4  autoopts.m4  ax_check_gnu_make.m4  cmake.m4  emtcl.m4  fcntl-o.m4  intl.m4  intldir.m4  inttypes-pri.m4  lib-link.m4  mp_tcl.m4  nls.m4  po.m4  progtest.m4  tcl.m4  threadlib.m4  uintmax_t.m4  xorg-macros.m4
modulecmd.xcodeproj/: project.pbxproj
modulefiles/: .gitignore  Makefile.am  Makefile.in  version
modulefiles/lang/: .gitignore
po/: .gitignore  ChangeLog  Makefile.am  Makefile.in
testsuite/home/: .gitignore
(+5 files in other folders)
