###########################################################################
##
## File:        po/Makefile.am
## Versions:    $Id$
## Created:     2013/07/11
##
###########################################################################

AUTOMAKE_OPTIONS = foreign no-installinfo -Wall

check :

clean-local :
